<?xml version="1.0" encoding="utf-8"?>
<!--
 * Copyright (C) 2010 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
-->

<resources>
    <string name="pos1">1500</string>
	<string name="pos2">1000</string>
	<string name="pos3">900</string>
	<string name="pos4">600</string>
	<string name="pos5">400</string>
    <string name="app_name">Catch the Pigeon</string>
    <string name="start_game">Start Game</string> 
    <string name="top_five">Top Five</string>
    <string name="high_score">High Score</string>        
	<string name="description">High Score</string>
	<string name="is_sair">Você quer mesmo sair?</string>
	<string name="fim_de_jogo">Fim de Jogo</string>
</resources>
