<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:background="@drawable/mosaic_pigeon_tela_transicao_layer01">

	<AbsoluteLayout
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:background="@drawable/mosaic_pigeon_tela_transicao_layer02"
		android:id="@+id/absoluteLayout1"
		android:layout_x="-1dip"
		android:layout_y="1dip">

		<ImageButton
			android:layout_width="wrap_content"
			android:id="@+id/help_button"
			android:layout_height="wrap_content"
			android:layout_x="28dip"
			android:background="@drawable/mosaic_pigeon_img_layer_twitter"
			android:layout_y="269dip"></ImageButton>
		<ImageButton
			android:layout_width="wrap_content"
			android:id="@+id/help_button"
			android:layout_height="wrap_content"
			android:background="@drawable/mosaic_pigeon_img_layer_help"
			android:layout_x="672dip"
			android:layout_y="254dip"></ImageButton>
		<ImageButton
			android:layout_width="wrap_content"
			android:id="@+id/help_button"
			android:layout_height="wrap_content"
			android:background="@drawable/mosaic_pigeon_img_layer_facebook"
			android:layout_x="28dip"
			android:layout_y="194dip"></ImageButton>
		<ImageView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/ImageViewPos6"
			android:background="@drawable/mosaic_pigeon_tela_transicao_separador_botoes"
			android:layout_x="275dip"
			android:layout_y="243dip"></ImageView>
		<ImageButton
			android:layout_width="wrap_content"
			android:id="@+id/next_level"
			android:layout_height="wrap_content"
			android:background="@drawable/mosaic_pigeon_tela_transicao_go"
			android:layout_x="332dip"
			android:layout_y="243dip"></ImageButton>
		<ImageView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/ImageViewPos6"
			android:background="@drawable/mosaic_pigeon_img_layer_picture_of_avatar_large"
			android:layout_x="550dip"
			android:layout_y="14dip"></ImageView>
		<ImageView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/ImageViewPos6"
			android:background="@drawable/mosaic_pigeon_img_layer_picture_of_avatar_large"
			android:layout_x="450dip"
			android:layout_y="126dip"></ImageView>
		<ImageView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/ImageViewPos6"
			android:background="@drawable/mosaic_pigeon_img_layer_picture_of_avatar_large"
			android:layout_x="350dip"
			android:layout_y="127dip"></ImageView>
		<ImageView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/ImageViewPos6"
			android:background="@drawable/mosaic_pigeon_img_layer_picture_of_avatar_large"
			android:layout_x="450dip"
			android:layout_y="15dip"></ImageView>
		<ImageView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/ImageViewPos6"
			android:background="@drawable/mosaic_pigeon_img_layer_picture_of_avatar_large"
			android:layout_x="350dip"
			android:layout_y="16dip"></ImageView>
		<TextView
			android:layout_width="wrap_content"
			android:text="@string/pos5"
			android:id="@+id/TextView01"
			android:layout_height="wrap_content"
			android:layout_x="470dip"
			android:layout_y="209dip"></TextView>
		<TextView
			android:layout_width="wrap_content"
			android:text="@string/pos4"
			android:id="@+id/TextView01"
			android:layout_height="wrap_content"
			android:layout_x="370dip"
			android:layout_y="211dip"></TextView>
		<TextView
			android:layout_width="wrap_content"
			android:text="@string/pos3"
			android:id="@+id/TextView01"
			android:layout_height="wrap_content"
			android:layout_x="565dip"
			android:layout_y="97dip"></TextView>
		<TextView
			android:layout_width="wrap_content"
			android:text="@string/pos2"
			android:id="@+id/TextView01"
			android:layout_height="wrap_content"
			android:layout_x="470dip"
			android:layout_y="99dip"></TextView>
		<ImageButton
			android:layout_width="wrap_content"
			android:id="@+id/help_button"
			android:layout_height="wrap_content"
			android:background="@drawable/mosaic_pigeon_tela_transicao_quadro_level_sigeon"
			android:layout_x="210dip"
			android:layout_y="69dip"></ImageButton>
		<ImageView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/ImageViewPos6"
			android:background="@drawable/mosaic_pigeon_tela_transicao_quadro_pontos"
			android:layout_x="210dip"
			android:layout_y="12dip"></ImageView>
		<ImageButton
			android:layout_width="wrap_content"
			android:id="@+id/help_button"
			android:layout_height="wrap_content"
			android:background="@drawable/mosaic_pigeon_tela_transicao_back"
			android:layout_x="210dip"
			android:layout_y="242dip"></ImageButton>
		<ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/ImageViewPos6" android:background="@drawable/mosaic_pigeon_ima_quadro_foto" android:layout_x="560dip" android:layout_y="30dip"></ImageView>
		<ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/ImageViewPos6" android:background="@drawable/mosaic_pigeon_ima_quadro_foto" android:layout_x="460dip" android:layout_y="30dip"></ImageView>
		<ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/ImageViewPos6" android:background="@drawable/mosaic_pigeon_ima_quadro_foto" android:layout_x="360dip" android:layout_y="30dip"></ImageView>
		<ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/ImageViewPos6" android:background="@drawable/mosaic_pigeon_ima_quadro_foto" android:layout_x="360dip" android:layout_y="141dip"></ImageView>
		<ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/ImageViewPos6" android:background="@drawable/mosaic_pigeon_ima_quadro_foto" android:layout_x="460dip" android:layout_y="141dip"></ImageView>
		<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/TextView01" android:text="@string/pos1" android:layout_x="370dip" android:layout_y="97dip"></TextView>
		<ImageButton android:id="@+id/help_button" android:layout_width="wrap_content" android:background="@drawable/mosaic_pigeon_icon_audio_icon" android:layout_height="wrap_content" android:layout_x="126dip" android:layout_y="243dip"></ImageButton>
	</AbsoluteLayout>


</AbsoluteLayout>
